unpackaged/main/default/objects/LoyaltySettings__mdt/LoyaltySettings__mdt.object-meta.xml
<CustomObject>
    <label>LoyaltySettings</label>
    <pluralLabel>LoyaltySettings</pluralLabel>
</CustomObject>