unpackaged/main/default/objects/LoyaltySettings__mdt/fields/chargeItKeyword__c.field-meta.xml
<CustomField>
    <fullName>chargeItKeyword__c</fullName>
    <label>MCchargeItKeyword</label>
    <length>12</length>
    <type>Text</type>
</CustomField>