unpackaged/main/default/objects/LoyaltySettings__mdt/fields/EnableRewardsButton__c.field-meta.xml
<CustomField>
    <fullName>EnableRewardsButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableRewardsButton</label>
    <type>Checkbox</type>
</CustomField>