unpackaged/main/default/objects/LoyaltySettings__mdt/fields/EnableTriggeredSend__c.field-meta.xml
<CustomField>
    <fullName>EnableTriggeredSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Triggered Send</label>
    <type>Checkbox</type>
</CustomField>