unpackaged/main/default/objects/LoyaltySettings__mdt/fields/IsLoyaltyApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsLoyaltyApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this brand is part of Loyalty program or not.</description>
    <label>IsLoyaltyApplicable</label>
    <type>Checkbox</type>
</CustomField>