unpackaged/main/default/objects/LoyaltySettings__mdt/fields/LogSignupActivity__c.field-meta.xml
<CustomField>
    <fullName>LogSignupActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Signup Activity</label>
    <type>Checkbox</type>
</CustomField>