unpackaged/main/default/objects/LoyaltySettings__mdt/fields/LoyaltyPrefix__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPrefix__c</fullName>
    <label>LoyaltyPrefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>