unpackaged/main/default/objects/LoyaltySettings__mdt/fields/MCSMSEnabled__c.field-meta.xml
<CustomField>
    <fullName>MCSMSEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS optin/optouts Enabled through SFMC system</description>
    <label>MC SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>