unpackaged/main/default/objects/LoyaltySettings__mdt/fields/Parent_Brand__c.field-meta.xml
<CustomField>
    <fullName>Parent_Brand__c</fullName>
    <label>Parent Brand</label>
    <length>2</length>
    <type>Text</type>
</CustomField>