unpackaged/main/default/objects/LoyaltySettings__mdt/fields/preferenceCenterKeyword__c.field-meta.xml
<CustomField>
    <fullName>preferenceCenterKeyword__c</fullName>
    <label>MCpreferenceCenterKeyword</label>
    <length>22</length>
    <type>Text</type>
</CustomField>