unpackaged/main/default/objects/LoyaltySettings__mdt/fields/shortCode__c.field-meta.xml
<CustomField>
    <fullName>shortCode__c</fullName>
    <label>MCshortCode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>