unpackaged/main/default/objects/LoyaltySettings__mdt/fields/stopKeyword__c.field-meta.xml
<CustomField>
    <fullName>stopKeyword__c</fullName>
    <label>MCstopKeyword</label>
    <length>22</length>
    <type>Text</type>
</CustomField>