unpackaged/main/default/objects/LoyaltySettings__mdt/fields/WaterfallSMSEnabled__c.field-meta.xml
<CustomField>
    <fullName>WaterfallSMSEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS optin/optout enabled thru Waterfall system</description>
    <label>WaterfallSMSEnabled</label>
    <type>Checkbox</type>
</CustomField>