unpackaged/main/default/objects/LoyaltySettings__mdt/fields/ZetaGUID__c.field-meta.xml
<CustomField>
    <fullName>ZetaGUID__c</fullName>
    <label>ZetaGUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>