unpackaged/main/default/objects/LoyaltySettings__mdt/listViews/Full_view.listView-meta.xml
<ListView>
    <fullName>Full_view</fullName>
    <columns>BrandId__c</columns>
    <columns>MasterLabel</columns>
    <columns>IsLoyaltyApplicable__c</columns>
    <columns>DeveloperName</columns>
    <columns>Parent_Brand__c</columns>
    <columns>LoyaltyPrefix__c</columns>
    <columns>EnableRewardsButton__c</columns>
    <columns>EnableTriggeredSend__c</columns>
    <columns>LogSignupActivity__c</columns>
    <columns>ZetaGUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full view</label>
</ListView>