unpackaged/main/default/objects/LoyaltySettings__mdt/listViews/Records.listView-meta.xml
<ListView>
    <fullName>Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BrandId__c</columns>
    <columns>IsLoyaltyApplicable__c</columns>
    <columns>Parent_Brand__c</columns>
    <columns>ZetaGUID__c</columns>
    <columns>WaterfallSMSEnabled__c</columns>
    <columns>MCSMSEnabled__c</columns>
    <columns>EnableRewardsButton__c</columns>
    <filterScope>Everything</filterScope>
    <label>Records</label>
</ListView>